--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,7 +48,7 @@
   }
 
   .nav-button {
-    @apply shadow-1 rounded-[10px] border border-lp-secondary bg-lp-white py-2 px-4 font-medium text-lp-primary dark:border-transparent dark:bg-lp-green-4 dark:text-lp-white;
+    @apply shadow-1 rounded-[10px] border bg-[#0029FF] py-2 px-4 font-medium text-white dark:border-transparent dark:bg-[#0029FF] dark:text-lp-white;
   }
 
   .nav-button-v2 {
@@ -131,7 +131,7 @@
   }
 
   .dialog {
-    @apply shadow-2 absolute top-8 left-4 right-4 bottom-8 z-50 m-auto mx-auto mt-auto flex h-fit max-h-[80vh] max-w-lg flex-col overflow-auto rounded-2xl border border-[#EAEAEA] bg-lp-white p-4 dark:border-transparent dark:bg-lp-gray-8 sm:left-8 sm:right-8;
+    @apply shadow-2 absolute top-8 left-4 right-4 bottom-8 z-50 m-auto mx-auto mt-auto flex h-fit max-h-[80vh] max-w-lg flex-col overflow-auto rounded-2xl border border-[#EAEAEA] bg-lp-white p-4 dark:border-transparent dark:bg-[#334155] sm:left-8 sm:right-8;
   }
 
   /* banner */
