--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,7 +52,7 @@
   }
 
   .nav-button-v2 {
-    @apply h-10 rounded-lg border border-llama-teal-2 px-4 py-1 text-llama-gray-600 dark:border-lp-gray-7 dark:text-llama-gray-100;
+    @apply h-10 rounded-lg   text-llama-gray-600  dark:text-llama-gray-100;
   }
 
   .primary-button {
